--- a/safepoint-analyzer-web/src/main/resources/templates/index.html
+++ b/safepoint-analyzer-web/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" th:href="@{webjars/bootstrap/4.2.1/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.2.1/css/bootstrap.min.css}"/>
     <link href="/css/upload.css" rel="stylesheet">
 </head>
 
