--- a/safepoint-analyzer-web/src/main/resources/public/css/upload.css
+++ b/safepoint-analyzer-web/src/main/resources/public/css/upload.css
@@ -81,3 +81,8 @@ main {
     padding: .75rem 1.25rem;
     font-weight: 700;
 }
+
+#textUploadForm textarea {
+    font-family: monospace;
+    font-size: 12px;
+}
