--- a/web-commons/src/main/resources/templates/welcome.html
+++ b/web-commons/src/main/resources/templates/welcome.html
@@ -59,68 +59,46 @@
             </div>
         </nav>
         <script type="text/javascript">
-            function withDomainColumn(columns, currentColumn, domainColumn) {
-                if (currentColumn === domainColumn) {
-                    return {
-                        sourceColumn: currentColumn,
-                        label: columns[currentColumn],
-                        role: 'domain'
+
+            let commonHighChartsPieChartsOptions = {
+                title: {
+                    text: ''
+                },
+
+                chart: {
+                    height: $(window).height() * 0.9,
+                    width: $(window).width() * 0.8,
+                    plotBackgroundColor: null,
+                    plotBorderWidth: null,
+                    plotShadow: false,
+                    type: 'pie'
+                },
+
+                pie: {
+                    dataLabels: {
+                        enabled: true,
+                        format: '<b>{point.name}</b>: {point.percentage:.1f} %',
                     }
-                } else {
-                    return {
-                        sourceColumn: currentColumn,
-                        label: columns[currentColumn],
-                        role: 'data'
+                },
+
+                tooltip: {
+                    pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>',
+                },
+
+                accessibility: {
+                    point: {
+                        valueSuffix: '%'
                     }
-                }
-            }
+                },
 
-            function pickDomainColumn(columns, domainColumnIndex) {
-                const allColumnsIndices = [...Array(columns.length).keys()]
-                return allColumnsIndices.map(i => withDomainColumn(columns, i, domainColumnIndex))
-            }
-
-            function commonHighChartsPieChartsOptions() {
-                return {
-                    title: {
-                        text: ''
+                legend: {
+                    align: 'left',
+                    verticalAlign: 'top',
+                    borderWidth: 0,
+                    style: {
+                        fontSize: 15,
                     },
-
-                    chart: {
-                        height: $(window).height() * 0.9,
-                        width: $(window).width() * 0.8,
-                        plotBackgroundColor: null,
-                        plotBorderWidth: null,
-                        plotShadow: false,
-                        type: 'pie'
-                    },
-
-                    pie: {
-                        dataLabels: {
-                            enabled: true,
-                            format: '<b>{point.name}</b>: {point.percentage:.1f} %',
-                        }
-                    },
-
-                    tooltip: {
-                        pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>',
-                    },
-
-                    accessibility: {
-                        point: {
-                            valueSuffix: '%'
-                        }
-                    },
-
-                    legend: {
-                        align: 'left',
-                        verticalAlign: 'top',
-                        borderWidth: 0,
-                        style: {
-                            fontSize: 15,
-                        },
-                    },
-                }
+                },
             }
 
             function commonHighChartsLineChartsOptions(xAxisLabel, yAxisLabel, forceZeroMinValue) {
@@ -183,7 +161,11 @@
                     </span>
                     <div th:each="content, contentStatus: ${page.pageContents}" th:inline="text">
                         <h3 th:if="${content.title != null}">[[${content.title}]]</h3>
-                        <span th:if="${content.info != null}">
+                        <span th:if="${conten            function pickDomainColumn(columns, domainColumnIndex) {
+                const allColumnsIndices = [...Array(columns.length).keys()]
+                return allColumnsIndices.map(i => withDomainColumn(columns, i, domainColumnIndex))
+            }
+t.info != null}">
                             [[${content.info}]]
                         </span>
                         <div th:if="${content.type.name() == 'CHART'}">
